--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
         background-color: black;
     }
 </style>
+<p style="color: white;font-family: sans-serif;font-size: 14px;"><span>Score: </span><span id="scoreEL">0</span></p>
 <canvas></canvas>
 <script src="index.js"></script>
